# sweep-uninstaller

./: Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.github/workflows/: release-portable.yml
scripts/: package-portable.ps1
src/: app.rs  enumerate.rs  leftovers.rs  logo_asset.rs  logo_bitmap.rs  main.rs  models.rs  ms_store.rs  steam.rs  uninstall.rs  win_lnk.rs
